    See RDoc::Markup for details.
  * Image paths at HTTPS URLs will now be turned into +<img>+ tags.  Pull
    Request #60 by James Mead
  * Added RDoc::Comment which encapsulates comment-handling functionality.
  * Added RDoc::Markup::PreProcess::post_process to allow arbitrary comment
    munging.
  * RDoc::RDoc::current is set for the entire RDoc run.

* Bug fixes
  * Markup defined by RDoc::Markup#add_special inside a <tt><tt></tt> is no
    longer converted.
  * Performance of RDoc::RubyLex has been improved.  Ruby Bug #5202 by Ryan
    Melton.
  * Add US-ASCII magic comments to work with <tt>ruby -Ku</tt>.  Issue #63 by
    Travis D. Warlick, Jr.

=== 3.9.2 / 2011-08-11

* Bug fix
  * Loosened TIDYLINK regexp to allow any content in the link section like:
    <tt>{foo}[rdoc-ref:SomeClass]</tt>
  * In HTML output headings are capped at <tt><h6></tt> again

=== 3.9.1 / 2011-07-31

* Bug fixes
  * Fix RDoc::Markup parser for a header followed by a non-text token.  Issue
    #56 by Adam Tait
  * Fix RDoc::Markup::ToHtmlCrossref#gen_url for non-<tt>rdoc-ref</tt> links.
  * Fix bug report URL when rdoc crashes.

=== 3.9 / 2011-07-30

* Minor enhancements
  * RDoc::Parser::C now supports :doc: and :nodoc: for class comments
  * Added the <tt>rdoc-ref:</tt> link scheme which links to a named reference.
    <tt>rdoc-ref:</tt> can resolve references to classes, modules, methods,
    files, etc.  This can be used to create cross-generator named links unlike
    the <tt>link:</tt> scheme which is dependent upon the exact file name.
    Issue #53 by Simon Chiang
  * Pulled RDoc::CrossReference out of RDoc::Markup::ToHtmlCrossref.
    Cross-references can now be created easily for non-HTML formatters.
* Bug fixes
  * `ri []` and other special methods now work properly.  Issue #52 by
    ddebernardy.
  * `ri` now has space between class comments from multiple files.
  * :stopdoc: no longer creates Object references.  Issue #55 by Simon Chiang